<!--
  Copyright (c) 2012 MASConsult Ltd
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">bgBanking</string>

    <!-- DSK Bank strings -->
    <skip />

    <string name="bank_name_dskbank">DSK Bank</string>

    <!-- ProCredit Bank strings -->
    <skip />

    <string name="bank_name_procreditbank">ProCredit Bank</string>

    <!-- SGExpressBank strings -->
    <skip />

    <string name="bank_name_sgexpress">SG Express Bank</string>

    <!-- FIBank strings -->
    <skip />

    <string name="bank_name_fibank_my">My Fibank</string>
    <string name="bank_name_fibank_ebanking">Virtual Branch (e-fibank)</string>

    <!-- Login activity strings -->
    <skip />

    <string name="ui_activity_login_title">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_agreement">IMPORTANT: This application uses registration for internet banking to obtain information. The password is saved only in the phone and is only used to extract information. Your username and password are sent only to the internet portal of the bank and use https secure connection.</string>
    <string name="back_button_label">Back</string>
    <string name="sign_in_button_label">Sign in</string>
    <string name="ui_content_description_bank_logo">bank logo</string>
    <string name="login_activity_authenticating">Logging in…</string>
    <string name="login_activity_loginfail_text_both">Invalid username or password!</string>
    <string name="login_activity_loginfail_text_pwonly">Wrong password!</string>
    <string name="choose_account_type">Choose account type</string>

    <!-- Main activity strings -->
    <skip />

    <string name="sample_account_name">sample account</string>

    <!-- Menu item strings -->
    <skip />

    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_add_account">Add account</string>
    <string name="menu_item_send_feedback">Send feedback</string>
    <string name="status_syncing">syncing…</string>
    <string name="status_pending_sync">pending sync</string>
    <string name="status_loading">loading…</string>
    <string name="status_no_accounts">no accounts</string>

</resources>